--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,8 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@import "~@fortawesome/fontawesome-free/css/all.min.css";
+
 
 /* Optional custom scrollbar and global styles */
 ::-webkit-scrollbar {
@@ -10,4 +12,17 @@
 ::-webkit-scrollbar-thumb {
   background-color: #6C63FF;
   border-radius: 4px;
+}
+
+/* Reset default margines and background */
+html {
+  scroll-behavior: smooth;
+}
+html,
+body,
+#root {
+  margin: 0;
+  padding: 0;
+  height: 100%;
+  background: linear-gradient(to right, #1e1b3c, #2a2455, #3a3070);
 }
